[tool.poetry]
name = "cource-project-2"
version = "0.1.0"
description = ""
authors = ["Елена Филипьева <olliwija@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
poetry-core = "^2.1.0"
mock = "^5.1.0"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
stubs = "^1.0.0"
numpy = "^2.2.3"
types-requests = "^2.32.0.20241016"


[tool.poetry.group.dev.dependencies]
mock = "^5.1.0"
requests = "^2.32.3"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"


[tool.poetry.group.lin.dependencies]
mypy = "^1.15.0"
isort = "^6.0.0"
black = "^25.1.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = '.venv'


[tool.black]
line_length = 119
exclude ='.git'


[tool.isort]
line_length = 119
